fixed mobile home spacing issues

--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -111,4 +111,7 @@
   .socialIcons img {
     width: 20px;
   }
+  .footer {
+    padding: 60px 0;
+  }
 }
