--- a/app/components/home1/AboutHome.module.css
+++ b/app/components/home1/AboutHome.module.css
@@ -104,4 +104,7 @@
     grid-template-columns: repeat(1, 1fr);
     row-gap: 30px;
   }
+  .AboutHome {
+    padding: 60px 0;
+  }
 }
