--- a/app/components/home1/WhatWeDo.module.css
+++ b/app/components/home1/WhatWeDo.module.css
@@ -46,4 +46,7 @@
   .wwdIconBoxIcon img {
     width: 50px;
   }
+  .WhatWeDo {
+    padding: 60px 0;
+  }
 }
